# public-property-data-extractor

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: cli.py
backend/app/exporters/: property_exporter.py  report_exporter.py
backend/app/extractors/: sample_directory.py
backend/app/importers/: florida_health.py
backend/app/normalizers/: text.py
backend/app/reports/: validation_report.py
backend/app/schemas/: property_record.py
backend/app/validators/: duplicates.py
backend/tests/: test_cli.py  test_duplicates.py  test_florida_health_importer.py  test_property_exporter.py  test_property_record.py  test_report_exporter.py  test_sample_directory_extractor.py  test_text_normalizer.py  test_validation_report.py
backend/tests/fixtures/: sample_directory.html
docs/: methodology.md  portfolio-notes.md
exports/: README.md
