[project]
name = "public-property-data-extractor"
version = "0.1.0"
description = "Backend data extraction pipeline for public property directory data."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
property-extractor = "app.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
